--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     name="viewport"
     content="minimum-scale=1, initial-scale=1, width=device-width"
   />
-  <title>Betina Demo</title>
+  <title>YouTube Plus</title>
 </head>
 <body>
 <noscript>You need to enable JavaScript to run this app.</noscript>
